solve gap issue under projects and trending, complete hoooooorary

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ h4 {
 }
 
 .project-icon {
-    width: 15px;
+    width: 20px;
     height: auto;
 }
 
@@ -210,6 +210,8 @@ li {
 .projects {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
+    display: flex;
+    flex-direction: column;
 }
 
 .projects-head {
@@ -221,6 +223,7 @@ li {
     grid-template-columns: repeat(2, 1fr);
     gap: 15px;
     padding: 1rem 2rem 2rem;
+    flex-grow: 1;
 }
 
 .card {
@@ -229,6 +232,9 @@ li {
     box-shadow: 0 4px 6px var(--shadow-color);
     padding: 2rem;
     border-left: 5px solid var(--border-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .project-title {
@@ -241,12 +247,12 @@ li {
 .project-description {
     font-size: 1.1rem;
     color: var(--secondary-text);
-    margin-bottom: 0.9rem;
 }
 
 .project-btn-div {
     display: flex;
     justify-content: flex-end;
+    margin-top: 3rem;
 }
 
 .project-icon {
@@ -300,6 +306,8 @@ li {
 .trending {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    display: flex;
+    flex-direction: column;
 }
 
 .trending-container {
@@ -309,6 +317,7 @@ li {
     margin-right: 2rem;
     margin-bottom: 2rem;
     box-shadow: 0 4px 6px var(--shadow-color);
+    flex-grow: 1;
 }
 
 .trending-item {
